--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ prefilter = "feta_prefilter.main:main"
 python = "^3.11"
 elasticsearch = "^8.12.0"
 psycopg2 = "^2.9.9"
+kafka-python-ng = "^2.2.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
