--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.11"
 elasticsearch = "^8.12.0"
 psycopg2 = "^2.9.9"
 kafka-python-ng = "^2.2.2"
+pygtrie = "^2.5.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
