--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ elasticsearch = "^8.12.0"
 psycopg2 = "^2.9.9"
 kafka-python-ng = "^2.2.2"
 pygtrie = "^2.5.0"
+pymisp = "^2.4.195"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
