Filters: replace StarFilter with ValidDomainFilter
This will trigger on any invalid domain instead of just domains that
contain a '*' character.

Signed-off-by: Ondrej Lichtner <ilichtner@fit.vutbr.cz>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg2 = "^2.9.9"
 kafka-python-ng = "^2.2.2"
 pygtrie = "^2.5.0"
 pymisp = "^2.4.195"
+validators = "^0.34.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
