--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ prefilter = "feta_prefilter.main:main"
 [tool.poetry.dependencies]
 python = "^3.11"
 elasticsearch = "^8.12.0"
-psycopg2 = "^2.9.9"
-kafka-python-ng = {extras = ["zstd"], version = "^2.2.3"}
+psycopg2-binary = "^2.9.10"
+kafka-python = {extras = ["zstd"], version = "^2.2.11"}
 pygtrie = "^2.5.0"
 pymisp = "^2.4.195"
 validators = "^0.34.0"
